# antihelium

./: .gitignore  ANTI_PROTON.c  ANTI_PROTON.h  BESSEL_ALPHAi_Qi  BESSEL_PRELIM.c  BESSEL_PRELIM.h  CMakeLists.txt  COMMON.h  CROSS_SECTIONS.c  CROSS_SECTIONS.h  DAVID_CROSS_SECTIONS_torsten.c  DAVID_CROSS_SECTIONS_torsten.h  DIFFUSION_PROPAGATION.c  DIFFUSION_PROPAGATION.h  DIFFUSION_PROPAGATION_julien_clump_1012.c  DSPBAR_SUR_DEPBAR_HE_on_H_high_energy  GAUSSJ.c  HELIUM.c  HELIUM.h  HELIUM_0809.h  MAIN.c  Makefile  Makefile_long  Makefile_short  PRIMARY_PBAR.c  PRIMARY_PBAR.h  PRIMARY_PBAR_julien_clump_1012.c  PRIMARY_PBAR_julien_clump_1012.h  PROTON.c  PROTON.h  PROTON_0809.c  README  SOLAR_MOD.c  SOLAR_MOD.h  STRUCTURES.h  TRIDAG.c  besselj0_next.c  besselj0_next.h  besselj1_next.c  cmake_install.cmake  (+4 more)
sources/: ANTI_PROTON.c  ANTI_PROTON.h  BESSEL_PRELIM.h  CROSS_SECTIONS.c  CROSS_SECTIONS.h  CROSS_SECTIONS_OLD.c  CROSS_SECTIONS_OLD.h  DIFFUSION_PROPAGATION.c  DIFFUSION_PROPAGATION.h  GAUSSJ.c  HELIUM.c  HELIUM.h  PRIMARY_PBAR.c  PRIMARY_PBAR.h  PROTON.c  PROTON.h  SOLAR_MOD.c  SOLAR_MOD.h  STRUCTURES.h  TRIDAG.c  TRIDAG.h  besselj1_next.h  spectra.c  spectra.h
sources/cross_section/: DSDe_SUR_DEDe_H_on_H_MDGS_F12.txt  DSDe_SUR_DEDe_H_on_H_MDGS_F12_vChardonnet.txt  DSHEBAR_SUR_DEHE3BAR_H_on_H_MDGS_F12.txt  DSHEBAR_SUR_DEHE3BAR_H_on_H_RW.txt  DSHEBAR_SUR_DEHE4BAR_H_on_H_MDGS_F12.txt  DSHEBAR_SUR_DEHE4BAR_H_on_H_RW.txt  DSHEBAR_SUR_DEHEBAR_HE_on_HE_MDGS_F12.txt  DSHEBAR_SUR_DEHEBAR_HE_on_H_MDGS_F12.txt  DSHEBAR_SUR_DEHEBAR_H_on_HE_MDGS_F12.txt  (+10 more)
